--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ATBU_Meat_Group",
+  "name": "atbu_meat_group",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,26 +10,37 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^1.16.3",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "firebase": "^8.6.8",
+    "@ant-design/react-native": "^4.2.0",
+    "@react-native-picker/picker": "1.16.1",
+    "@react-navigation/bottom-tabs": "6.0.4",
+    "@react-navigation/drawer": "6.1.3",
+    "@react-navigation/elements": "1.0.4",
+    "@react-navigation/material-bottom-tabs": "6.0.4",
+    "@react-navigation/material-top-tabs": "6.0.2",
+    "@react-navigation/native": "6.0.2",
+    "@react-navigation/native-stack": "6.0.5",
+    "@react-navigation/stack": "6.0.6",
+    "firebase": "8.2.3",
     "nanoid": "^3.1.23",
-    "react": "17.0.1",
-    "react-dom": "^16.8.6",
-    "react-native": "0.64.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-breadcrumb": "^1.2.0",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-get-random-values": "^1.7.0",
+    "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-pager-view": "5.0.12",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-simple-stepper": "^3.0.3",
+    "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
